...
            <objects>
                <viewController storyboardIdentifier="AuthViewController" id="b8J-Sx-Bx1" customClass="AuthViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="av7-dd-w3u">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="Authenticate" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QaX-3O-3Wb">
                                <rect key="frame" x="16" y="680" width="361" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="eTa-3x-6fH"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="gray" title="Войти">
                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="17"/>
                                    <color key="baseForegroundColor" name="YP Black"/>
                                    <color key="baseBackgroundColor" name="YP White"/>
                                </buttonConfiguration>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
...
                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                            <integer key="value" value="16"/>
                                                        </userDefinedRuntimeAttribute>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="like_button" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aKx-PD-o6o">
                                                    <rect key="frame" x="317" y="4" width="68" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="like_button"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="44" id="1oK-YH-79v"/>
                                                    </constraints>
                                                    <state key="normal" title="Button"/>
...
                                <connections>
                                    <outlet property="delegate" destination="0lJ-jl-ZN1" id="AJz-I3-u2X"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lUN-8o-7vz">
                                <rect key="frame" x="8" y="67" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="nav_back_button"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="4Mo-21-s15"/>
                                    <constraint firstAttribute="width" constant="48" id="Za1-GP-5XB"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Button" image="Backward"/>
...
